--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-  <p>This is my new git code</p>  
+  <p>This is a my new git code</p>  
 </body>
 </html>
