--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <p>This is a my new git code</p>  
+  <p>This is a my new git code</p> 
+  <p>Amusa is a girl</p> 
 </body>
 </html>
