--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tribute Page</title>
 </head>
 <body>
-  <p>This is a my new git code</p> 
-  <p>Amusa is a girl</p> 
+ <h1>Shiek Basheer Adelani</h1>
+ <h2>About the Mudeer</h2>
+ <div>
+   <ul>
+     <li>He was the general overseer of the great Islamic citadel of learning</li>
+     <li>The great is located at Olorunsogo Akanran road, Ibadan.</li>
+     <li>Sheik managed the great citadel for above twenty years where he was positioned as the general manager and part of Board of Directors.</li>
+     <li>He served in between 1980's to 2010</li>
+   </ul>
+ </div>
 </body>
 </html>
